--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,15 @@
         "psr-4": {
             "Subugoe\\Nkwgok\\": "Classes/"
         }
+    },
+    "extra": {
+        "typo3/class-alias-loader": {
+            "class-alias-maps": [
+                "Migrations/Code/ClassAliasMap.php"
+            ]
+        }
+    },
+    "require": {
+        "typo3/class-alias-loader": "^1.0"
     }
 }
