--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         }
     },
     "require": {
-        "typo3/cms-core": "^8.7.13 || >=9.1.0 <9.3.0"
+        "typo3/cms-core": "^9.4"
     }
 }
