--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "subugoe/nkwgok",
     "description": "Subject hierarchy for TYPO3",
     "type": "typo3-cms-extension",
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Ingo Pfennigstorf",
@@ -15,6 +15,6 @@
         }
     },
     "require": {
-        "typo3/cms-core": "^9.4"
+        "typo3/cms-core": "^9.5"
     }
 }
