--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     "require": {
         "php": ">7.3.0",
         "typo3/cms-core": "^9.5"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.15"
     }
 }
